derive_tests/tests/compile_fail/len_unknown_arg.rs
use validify::Validate;

#[derive(Validate)]
struct Test {
    #[validate(length(eq = 2))]
    s: String,
}

fn main() {}
